@@ -1,3 +1,7 @@
+2003-09-08  Danilo Šegan  <dsegan@gmx.net>
+
+	* rni18n.xml: Added Albanian to supported languages (28 now).
+
 2003-09-07 John Fleck <jfleck@inkstain.net>
 
 	* rnplatform.xml
